Prevent showmore covering up the end of posts, plus put likes back where they were pre-threaded comments.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -1128,6 +1128,10 @@ footer {
 	margin-top: 10px;
 }
 
+.wall-item-body.divmore {
+        padding-bottom: 15px;
+}
+
 .wall-item-tools {
 	clear: both;
     padding: 5px 10px;
